[package]
name = "control-Simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
device_query = "3.0.1"
eframe = "0.31.1"
egui = "0.31.1"
vigem-client = "0.1.4"

windows = { version = "0.61.1", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation"
] }